# PracticasPAG

./: .gitignore  CMakeLists.txt  GUI.cpp  GUI.h  README.md  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  conandata.yml  main.cpp
